ls-tokyo/kubekube/ns-shiori/50-api-server.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-server
  namespace: shiori
  labels:
    app: api-server
spec:
  type: NodePort
  selector:
    app: api-server
  ports:
    - port: 3000
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server
  namespace: shiori
  labels:
    app: api-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-server
  template:
    metadata:
      labels:
        app: api-server
    spec:
      containers:
        - image: ghcr.io/hellodhlyn/shiori:v1.7.0
          name: api-server
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 200m
              memory: 512Mi
          ports:
            - containerPort: 3000
              name: api-server-port
          livenessProbe:
            httpGet:
              path: /ping
              port: api-server-port
            initialDelaySeconds: 30
          readinessProbe:
            httpGet:
              path: /ping
              port: api-server-port
            initialDelaySeconds: 30
