ls-tokyo/kubekube/ns-shiori/90-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-server
  namespace: shiori
spec:
  ingressClassName: traefik
  rules:
    - host: cms.lynlab.co.kr
      http:
        paths:
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: api-server
                port:
                  number: 3000
  tls:
    - secretName: lynlab-co-kr-tls
      hosts:
        - cms.lynlab.co.kr
